Se modifica las urls de los scrips y css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <title>Juego del Ahorcado con Javascript</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="window-notice" id="window-notice" style="display: none">
@@ -27,9 +27,8 @@
     </div>
 
     <!-- particles.js container -->
-    <div id="particles-jss"></div>
     <header class="d-flex">
-      <img src="/img/logo.png" alt="logo" />
+      <img src="img/logo.png" alt="logo" />
     </header>
 
     <section>
@@ -101,10 +100,10 @@
     </div>
 
     <footer class="d-flex">
-      <img src="/img/logo_oracleAlura-es_branca.1647533644.svg" alt="" />
+      <img src="img/logo_oracleAlura-es_branca.1647533644.svg" alt="" />
       <h3>Wilmer Ortiz Castillo</h3>
     </footer>
 
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
