--- a/index.html
+++ b/index.html
@@ -74,14 +74,17 @@
             rows="10"
             class="form"
             autofocus
+            minlength="2"
+            maxlength="8"
           ></textarea>
         </div>
         <div class="section d-flex alert separador">
           <span class="icono d-flex justify-center">!</span> Max de 8 letras
         </div>
         <div class="section d-flex space-between buttons separador">
-          <button class="btn btn-primary" id="btnSavePalabra">
-            GUARDAR Y EMPEZAR
+          <button class="btn btn-primary" id="btnSavePalabra">GUARDAR</button>
+          <button class="btn btn-primary" id="btnIniciarJuego">
+            INICIAR JUEGO
           </button>
           <button class="btn btn-primary-outlined" id="btnCancelar">
             CANCELAR
